Fix to hidden overflow(ed) of image in slide

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -296,6 +296,7 @@
 	flex: 5;
 	-webkit-flex: 5;
 	-ms-flex: 5;
+	overflow: hidden;
 }
 .slide-item-image-wrapper > a {
 	flex: 1;
